--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ fastjsonschema==2.21.2
 fqdn==1.5.1
 idna==3.10
 ipykernel==6.29.5
-ipython==9.4.0
+ipython
 ipython-genutils==0.2.0
 ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
